--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,15 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-        buildConfigField("String","OPENLIBRARY_BASE_URL",OPENLIBRARY_BASE_URL)
-        buildConfigField("String","OPENLIBRARY_COVERS_URL",OPENLIBRARY_COVERS_URL)
+        buildConfigField("String", "OPENLIBRARY_BASE_URL", OPENLIBRARY_BASE_URL)
+        buildConfigField("String", "OPENLIBRARY_COVERS_URL", OPENLIBRARY_COVERS_URL)
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
         }
+
+        testInstrumentationRunner = "com.github.leuludyha.ibdb.HiltTestRunner"
     }
 
     buildTypes {
@@ -81,6 +83,12 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0'
+
+    // For instrumented tests.
+    androidTestImplementation("com.google.dagger:hilt-android-testing:2.44")
+    // ...with Kotlin.
+    kaptAndroidTest("com.google.dagger:hilt-android-compiler:2.44")
+
     // Coil
     implementation("io.coil-kt:coil-compose:1.4.0")
     // System UI Controller - Accompanist
