--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 
     // Google truth for assertions
     testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 
     //ROOM DB
     implementation "androidx.room:room-ktx:$room_version"
