--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 
     testImplementation "junit:junit:$junit_version"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    // Coroutines test
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
