--- a/data/build.gradle
+++ b/data/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 
     // Coroutines test
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
 
     // Mock web server
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
