--- a/data/build.gradle
+++ b/data/build.gradle
@@ -78,6 +78,12 @@ dependencies {
     // Submodules
     implementation project(path: ':domain')
 
+    //Google Play Services dependency for the Maps SDK for android
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.maps.android:maps-compose:2.11.0'
+    implementation 'com.google.maps.android:android-maps-utils:3.4.0'
+    implementation 'com.google.maps.android:maps-utils-ktx:3.4.0'
+
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:31.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
