--- a/data/build.gradle
+++ b/data/build.gradle
@@ -91,7 +91,7 @@ dependencies {
     implementation project(path: ':domain')
 
     //Firebase
-    implementation platform('com.google.firebase:firebase-bom:31.3.0')
+    //implementation platform('com.google.firebase:firebase-bom:31.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
