--- a/data/build.gradle
+++ b/data/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
     implementation project(path: ':domain')
 
-    implementation "androidx.core:core-ktx:$core_ktx_version"
+    implementation "androidx.core:core-ktx:1.10.0"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
     testImplementation "junit:junit:$junit_version"
@@ -70,10 +70,10 @@ dependencies {
     androidTestImplementation "com.google.truth:truth:1.1.3"
 
     //ROOM DB
-    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-runtime:2.5.1"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-paging:$room_version"
+    implementation "androidx.room:room-ktx:2.5.1"
+    implementation "androidx.room:room-paging:2.5.1"
 
     // Paging 3.0
     implementation "androidx.paging:paging-compose:$paging_version"
@@ -85,7 +85,7 @@ dependencies {
 
     //Play Services
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$play_services_version"
-    implementation "com.google.android.gms:play-services-auth:$play_services_auth_version"
+    implementation "com.google.android.gms:play-services-auth:20.5.0"
 
     // Submodules
     implementation project(path: ':domain')
@@ -94,7 +94,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
-    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-auth:21.3.0'
 
     implementation "com.google.firebase:firebase-auth-ktx"
     implementation "com.google.firebase:firebase-firestore-ktx"
