--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -37,7 +37,7 @@ android {
 
 dependencies {
 
-    implementation "androidx.core:core-ktx:$core_ktx_version"
+    implementation "androidx.core:core-ktx:1.10.0"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
 
     testImplementation "junit:junit:$junit_version"
@@ -60,17 +60,17 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest:2.2'
 
     //ROOM DB
-    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-ktx:2.5.1"
 
     // Paging 3.0
     implementation "androidx.paging:paging-compose:$paging_version"
 
     //Camerax
     def camerax_version = "1.3.0-alpha04"
-    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-core:1.3.0-alpha06"
 
     //Barcode Analyser
-    implementation 'com.google.mlkit:barcode-scanning:17.0.3'
+    implementation 'com.google.mlkit:barcode-scanning:17.1.0'
     //implementation "androidx.paging:paging-compose:$paging_version"
 
     //Firebase
@@ -80,11 +80,11 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
-    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-auth:21.3.0'
 
     //Play Services
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$play_services_version"
-    implementation "com.google.android.gms:play-services-auth:$play_services_auth_version"
+    implementation "com.google.android.gms:play-services-auth:20.5.0"
 
 }
 
