--- a/data/build.gradle
+++ b/data/build.gradle
@@ -99,6 +99,9 @@ dependencies {
     implementation "com.google.firebase:firebase-auth-ktx"
     implementation "com.google.firebase:firebase-firestore-ktx"
 
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.8'
+
 }
 
 task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
