--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,6 +137,10 @@ dependencies {
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
+    // Google truth for assertions
+    testImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
+
     //Google Play Services dependencies for the Maps SDK for android
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.maps.android:maps-compose:2.11.0'
