--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,24 @@
 buildscript {
     ext {
         compose_compiler_version = '1.4.3'
-        compose_version = '1.3.3'
-        material_version = '1.0.1'
-        material_extended_icons_version = '1.3.1'
+        compose_version = '1.4.3'
+        material_version = '1.1.0'
+        material_extended_icons_version = '1.4.3'
 
-        core_ktx_version = '1.9.0'
+        core_ktx_version = '1.10.1'
         appcompat_version = '1.6.1'
         junit_version = '4.13.2'
 
-        hilt_version = "2.44.2"
-        coroutine_version = "1.6.4"
-        room_version = "2.5.0"
-        paging_version = "1.0.0-alpha18"
+        hilt_version = '2.46'
+        coroutine_version = '1.7.0'
+        room_version = '2.5.1'
+        paging_version = '1.0.0-alpha19'
         kotlin_version = '1.8.10'
 
         google_services_version = "4.3.14"
-        firebase_bom_version = "29.3.1"
-        play_services_version = "1.6.0"
-        play_services_auth_version = "20.2.0"
+        firebase_bom_version = '32.0.0'
+        play_services_version = '1.7.0'
+        play_services_auth_version = '20.5.0'
     }
 
     dependencies {
