--- a/data/build.gradle
+++ b/data/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
     implementation project(path: ':domain')
 
-    implementation "androidx.core:core-ktx:1.10.0"
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
     testImplementation "junit:junit:$junit_version"
@@ -50,20 +50,20 @@ dependencies {
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.11'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
     // Coroutines test
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0'
 
     // Mock web server
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
-    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'
 
     // Google truth for assertions
     testImplementation "com.google.truth:truth:1.1.3"
@@ -87,20 +87,23 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$play_services_version"
     implementation "com.google.android.gms:play-services-auth:20.5.0"
 
+    // Nearby connections
+    implementation 'com.google.android.gms:play-services-nearby:18.5.0'
+
     // Submodules
     implementation project(path: ':domain')
 
     //Firebase
-    implementation platform('com.google.firebase:firebase-bom:31.3.0')
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
-    implementation 'com.google.firebase:firebase-auth:21.3.0'
+    implementation 'com.google.firebase:firebase-auth:22.0.0'
 
     implementation "com.google.firebase:firebase-auth-ktx"
     implementation "com.google.firebase:firebase-firestore-ktx"
 
     //Picasso
-    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
 
