--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -37,13 +37,13 @@ android {
 
 dependencies {
 
-    implementation "androidx.core:core-ktx:1.10.0"
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation "androidx.appcompat:appcompat:$appcompat_version"
 
     testImplementation "junit:junit:$junit_version"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
     // Coroutines test
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -53,7 +53,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
     //GSON
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     // Google truth for assertions
     testImplementation "com.google.truth:truth:1.1.3"
@@ -80,7 +80,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
-    implementation 'com.google.firebase:firebase-auth:21.3.0'
+    implementation 'com.google.firebase:firebase-auth:22.0.0'
 
     //Play Services
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$play_services_version"
