--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -51,12 +51,14 @@ dependencies {
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
 
     //GSON
     implementation 'com.google.code.gson:gson:2.9.0'
 
     // Google truth for assertions
     testImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
     testImplementation 'org.hamcrest:hamcrest:2.2'
 
     //ROOM DB
