--- a/data/build.gradle
+++ b/data/build.gradle
@@ -71,7 +71,7 @@ dependencies {
 
     //ROOM DB
     implementation "androidx.room:room-runtime:2.5.1"
-    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:2.5.1"
     implementation "androidx.room:room-paging:2.5.1"
