--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,9 @@ dependencies {
     // System UI Controller - Accompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
 
+    // JSON
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
+
     //ROOM DB
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
