--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,14 +65,14 @@ android {
 dependencies {
 
     implementation "androidx.core:core-ktx:$core_ktx_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation('androidx.lifecycle:lifecycle-runtime-compose:2.6.1')
-    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0'
+    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.0")
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation 'androidx.navigation:navigation-testing:2.5.3'
-    implementation 'androidx.compose.material:material:1.4.3'
+    implementation 'androidx.compose.material:material:1.2.0'
     androidTestImplementation project(path: ':domain')
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
@@ -82,11 +82,11 @@ dependencies {
     // It is not recommended to use this directly as the archive size is ~30MB apparently
     implementation "androidx.compose.material:material-icons-extended:$material_extended_icons_version"
 
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0'
 
     // Coil
-    implementation('io.coil-kt:coil-compose:2.3.0')
+    implementation("io.coil-kt:coil-compose:1.4.0")
     // System UI Controller - Accompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
 
@@ -103,11 +103,11 @@ dependencies {
     implementation platform("com.google.firebase:firebase-bom:$firebase_bom_version")
     implementation "com.google.firebase:firebase-auth-ktx"
     implementation "com.google.firebase:firebase-firestore-ktx"
-    implementation 'com.google.firebase:firebase-appcheck-debug:17.0.0'
+    implementation 'com.google.firebase:firebase-appcheck-debug:16.1.2'
 
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
-    implementation 'com.google.firebase:firebase-auth:22.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.3.0'
 
     //Play Services
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$play_services_version"
@@ -121,13 +121,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-nearby:18.5.0'
 
     //Barcode
-    implementation 'com.google.mlkit:barcode-scanning:17.1.0'
+    implementation 'com.google.mlkit:barcode-scanning:17.0.3'
 
     //Some magic fixing to avoid duplicate classes at build time
     //implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
     //Camerax
-    def camerax_version = '1.3.0-alpha06'
+    def camerax_version = "1.3.0-alpha04"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
@@ -146,7 +146,7 @@ dependencies {
 
     //Google Play Services dependencies for the Maps SDK for android
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
-    implementation 'com.google.maps.android:maps-compose:2.11.4'
+    implementation 'com.google.maps.android:maps-compose:2.11.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
 
@@ -163,13 +163,13 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
-    androidTestImplementation('com.google.dagger:hilt-android-testing:2.46')
-    kaptAndroidTest('com.google.dagger:hilt-android-compiler:2.46')
+    androidTestImplementation("com.google.dagger:hilt-android-testing:2.44")
+    kaptAndroidTest("com.google.dagger:hilt-android-compiler:2.44")
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.11'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 }
 
 // Allow references to generated code
